--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,8 @@
 <div *ngIf="dob.invalid && (dob.dirty || dob.touched)">
 
 <div *ngIf="dob.errors.required" class="error">
-Date of Birth is required.
+   <span style="margin-left:16em">
+     Date of Birth is required.</span>
 
 </div>
 
